--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,12 +13,10 @@
       }
     </style>
   </head>
-  <body>
+  <body class="gradient-custom">
 
-    <section class="gradient-custom">
-
-      
-      <div class="container py-5 h-100">
+    <section>
+      <div class="container py-5">
         
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col col-xl-10">
