--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -13,11 +13,11 @@
       }
     </style>
   </head>
-  <body>
+  <body class="gradient-custom">
 
-    <section class="gradient-custom">
+    <section>
       
-      <div class="container py-5 h-100">
+      <div class="container py-5">
         
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col col-xl-10">
